--- a/frontend/src/assets/styles/cmps/_board-list.scss
+++ b/frontend/src/assets/styles/cmps/_board-list.scss
@@ -1,23 +1,31 @@
 .board-list {
 	width: 254px;
+	height: 100%;
 	background-color: $bg-clr3;
 
 	.workspace-title {
+		height: 34px;
+		margin-block-end: 10px;
 		gap: 2.8em;
 		color: $clr1;
 	}
 
 	.searchbox-container {
-		padding: 0px 16px 8px 14px;
+		padding: 0px 24px 8px 0px;
 	}
 
 	.searchbox-wrapper {
-		background: $clr0;
+		background-color: inherit;
+
 		border: 1px solid $clr4;
 		border-radius: 0.4em;
 		height: rem(32px);
 		width: rem(180px);
 		position: relative;
+
+		&:has(:focus) {
+			background-color: $clr0;
+		}
 
 		svg {
 			color: $clr1;
@@ -51,6 +59,13 @@
 	}
 
 	.board-title-preview {
+		justify-content: space-between;
+		align-items: center;
+		span {
+			display: flex;
+			align-items: center;
+			gap: rem(5px);
+		}
 		cursor: pointer;
 		padding: 0.5em;
 		gap: 0.5em;
@@ -63,6 +78,7 @@
 	}
 
 	.add-btn {
+		cursor: pointer;
 		color: $clr0;
 		background-color: $bg-clr1;
 		width: rem(32px);
